# v5_ur5arm

./: README.md
gazebo_description/: CMakeLists.txt  package.xml
gazebo_description/launch/inc/: load_ur.launch.xml  load_ur5.launch.xml  ur_control.launch.xml
gazebo_description/urdf/: ur.xacro  ur_macro.xacro
ur5_description/: CMakeLists.txt  package.xml
ur5_description/launch/: load_ur.launch  load_ur5.launch  view_ur5.launch
ur5_description/urdf/: ur.transmission.xacro  ur.xacro  ur5.urdf.xacro  ur5.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robotiq85_gripper.urdf.xacro
ur5_description/urdf/inc/: ur5_macro.xacro  ur_macro.xacro
ur5_description/urdf/sensors/: kinect.urdf.xacro  kinect_gazebo.xacro
ur5_moveit_config/: .setup_assistant  package.xml
ur5_moveit_config/config/: fake_controllers.yaml  ros_controllers.yaml  ur5.srdf
ur5_moveit_config/launch/: demo_gazebo.launch  gazebo.launch  move_group.launch  planning_context.launch  ros_controllers.launch  trajectory_execution.launch.xml
